--- a/分散表現.ipynb
+++ b/分散表現.ipynb
@@ -227,50 +227,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "377dc458",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting torch\n",
-      "  Downloading torch-1.12.1-cp39-cp39-win_amd64.whl (161.8 MB)\n",
-      "     -------------------------------------- 161.8/161.8 MB 5.1 MB/s eta 0:00:00\n",
-      "Collecting torchvision\n",
-      "  Downloading torchvision-0.13.1-cp39-cp39-win_amd64.whl (1.1 MB)\n",
-      "     ---------------------------------------- 1.1/1.1 MB 7.5 MB/s eta 0:00:00\n",
-      "Collecting torchaudio\n",
-      "  Downloading torchaudio-0.12.1-cp39-cp39-win_amd64.whl (969 kB)\n",
-      "     -------------------------------------- 969.6/969.6 kB 5.6 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: torch in c:\\programdata\\anaconda3\\lib\\site-packages (1.12.1)\n",
+      "Requirement already satisfied: torchvision in c:\\programdata\\anaconda3\\lib\\site-packages (0.13.1)\n",
+      "Requirement already satisfied: torchaudio in c:\\programdata\\anaconda3\\lib\\site-packages (0.12.1)\n",
       "Requirement already satisfied: typing-extensions in c:\\programdata\\anaconda3\\lib\\site-packages (from torch) (4.3.0)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from torchvision) (9.2.0)\n",
       "Requirement already satisfied: numpy in c:\\programdata\\anaconda3\\lib\\site-packages (from torchvision) (1.21.5)\n",
       "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\lib\\site-packages (from torchvision) (2.28.1)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from torchvision) (9.2.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (3.3)\n",
-      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (2.0.4)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (1.26.11)\n",
+      "Requirement already satisfied: charset-normalizer<3,>=2 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (2.0.4)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (2022.9.24)\n",
-      "Installing collected packages: torch, torchvision, torchaudio\n",
-      "Successfully installed torch-1.12.1 torchaudio-0.12.1 torchvision-0.13.1\n"
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\lib\\site-packages (from requests->torchvision) (3.3)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: Ignoring invalid distribution -p (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -p (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -p (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -ip (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution - (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -p (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution -ip (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
       "WARNING: Ignoring invalid distribution - (c:\\programdata\\anaconda3\\lib\\site-packages)\n",
@@ -317,19 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "4fa711d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(-0.1447)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'newX' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctional\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mF\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m A \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(\u001b[43mnewX\u001b[49m[\u001b[38;5;241m0\u001b[39m])\n\u001b[0;32m      4\u001b[0m B \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mFloatTensor(newX[\u001b[38;5;241m9\u001b[39m])\n\u001b[0;32m      5\u001b[0m F\u001b[38;5;241m.\u001b[39mcosine_similarity(A,B,dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'newX' is not defined"
+     ]
     }
    ],
    "source": [
@@ -358,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "56827afd",
    "metadata": {},
    "outputs": [],
@@ -382,19 +364,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "2a3d8669",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'Word2Vec' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m sentences \u001b[38;5;241m=\u001b[39m word2vec\u001b[38;5;241m.\u001b[39mLineSentence(wakatifile)\n\u001b[0;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m Word2Vec(sentences)\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mmodel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m犬\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'Word2Vec' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'gensim.models.word2vec.Word2Vec'>\n"
      ]
     }
    ],
@@ -403,13 +381,270 @@
     "from gensim.models import Word2Vec\n",
     "sentences = word2vec.LineSentence(wakatifile)\n",
     "model = Word2Vec(sentences)\n",
-    "print(model['犬'])"
+    "print(type(model))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d200a4",
+   "metadata": {},
+   "source": [
+    "### 事前学習済のword2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "53eca374",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import KeyedVectors\n",
+    "\n",
+    "model = KeyedVectors.load('chive-1.1-mc5-aunit_gensim\\chive-1.1-mc5-aunit.kv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cb1db812",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.50058043"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.similarity('葡萄','メロン')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2fb86c64",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "322094"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model.key_to_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "748f52a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('巨峰', 0.7231999635696411), ('果実', 0.6389086842536926), ('桜ん坊', 0.6240198016166687), ('シャルドネ', 0.618291437625885), ('ワイン', 0.6176699995994568)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.most_similar('葡萄',topn=5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2ab04866",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('秋', 0.5729417204856873),\n",
+       " ('冬', 0.5290267467498779),\n",
+       " ('春', 0.527359127998352)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.most_similar(positive=['山','夏'],negative=['海'],topn=3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e534a73",
+   "metadata": {},
+   "source": [
+    "### 2.4 doc2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3811d150",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.doc2vec import TaggedDocument\n",
+    "with open('wakati_doc.txt', encoding='utf-8') as f:\n",
+    "    docs = [TaggedDocument(words=data.split(),tags=[i]) for i,data in enumerate(f)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "89ea31ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.doc2vec import Doc2Vec\n",
+    "model = Doc2Vec(docs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9e2b6613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('mymodel.model')\n",
+    "medel = Doc2Vec.load('mymodel.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f9d2cb2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.08137354e-02, -3.60686448e-03, -1.68751404e-02,  1.00992694e-02,\n",
+       "        2.70028273e-03, -2.33986657e-02, -1.93522498e-03,  1.79511961e-02,\n",
+       "       -1.64268762e-02, -6.23647822e-03, -6.03719335e-03, -1.80389471e-02,\n",
+       "       -2.55854242e-03,  3.33547505e-04, -6.27460191e-03, -1.80697627e-02,\n",
+       "        1.20822592e-02, -4.17566299e-03, -1.06561501e-02, -3.03472783e-02,\n",
+       "        1.20246354e-02,  1.37604645e-03,  5.35555743e-03, -6.29999861e-03,\n",
+       "        6.32416923e-03, -1.41887018e-03, -2.22760793e-02, -1.37436436e-02,\n",
+       "       -9.75212734e-03, -1.32230837e-02,  1.26991915e-02,  1.62335671e-02,\n",
+       "       -3.38499347e-04, -1.54851247e-02, -1.25121120e-02,  2.70942431e-02,\n",
+       "       -6.13774732e-03, -2.54533496e-02, -1.35383690e-02, -7.05700414e-03,\n",
+       "        3.49374046e-03, -2.63165459e-02, -8.77705534e-05, -1.61053482e-02,\n",
+       "        7.55836256e-03, -2.26655193e-02, -9.27963760e-03,  2.73518241e-03,\n",
+       "        1.23287337e-02, -4.61329194e-03,  9.55367181e-03, -2.19134502e-02,\n",
+       "       -4.44071181e-03, -9.71031433e-04, -1.02523277e-02,  1.43035585e-02,\n",
+       "        6.46273652e-03,  9.89190012e-05, -1.75483376e-02,  2.03224830e-02,\n",
+       "        6.88274158e-03, -7.63067976e-04,  2.01963019e-02, -4.34176950e-03,\n",
+       "       -1.66714396e-02,  6.45801984e-03,  1.08734695e-02,  1.10422000e-02,\n",
+       "       -2.01732013e-02,  3.20913806e-03, -6.32968498e-03,  1.35319056e-02,\n",
+       "        9.51192225e-04, -8.76247976e-03,  1.39876856e-02,  8.93243682e-03,\n",
+       "       -3.16819362e-03, -8.57921969e-03,  2.00438872e-03,  1.67357957e-03,\n",
+       "       -1.34183851e-03, -2.91720056e-03, -2.60828603e-02,  1.95560716e-02,\n",
+       "       -2.26029870e-03,  2.04931037e-03,  1.03771882e-02,  1.14766005e-02,\n",
+       "        2.35849861e-02,  1.07854176e-02,  1.34463590e-02,  9.77014750e-03,\n",
+       "       -9.56251565e-03, -6.30535791e-03,  2.20062397e-02,  1.35569181e-02,\n",
+       "        5.14223706e-03, -1.48770912e-02,  1.00780614e-02, -7.07133999e-03],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.dv[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "39cf13c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(731, 0.9468039274215698),\n",
+       " (576, 0.9417536854743958),\n",
+       " (196, 0.9413872957229614),\n",
+       " (573, 0.9384422302246094)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.dv.most_similar(1,topn=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5b4cafff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.00859902,  0.01011155, -0.00808303, -0.0039235 , -0.00041212,\n",
+       "       -0.01831308,  0.0063673 ,  0.02537156, -0.00326623, -0.00473055,\n",
+       "       -0.00889074, -0.02238915, -0.00067427,  0.00557083, -0.00108072,\n",
+       "       -0.00913868,  0.01139112, -0.00185002,  0.00279234, -0.02671054,\n",
+       "        0.01507623, -0.00178387,  0.01703887, -0.00687599,  0.00273824,\n",
+       "        0.0147821 , -0.02003526, -0.00321776, -0.01605098, -0.00430303,\n",
+       "        0.00124331,  0.00877965,  0.00949923, -0.00797731, -0.01230116,\n",
+       "        0.02930696, -0.01092273, -0.01771256, -0.01616312, -0.00896365,\n",
+       "        0.00668247, -0.0205541 , -0.00510602, -0.01101989,  0.00432243,\n",
+       "       -0.02175647, -0.00861292,  0.004426  ,  0.00603218,  0.00059241,\n",
+       "        0.0085566 , -0.02613855, -0.00027886,  0.01040063, -0.0080724 ,\n",
+       "        0.00665825,  0.01113282, -0.01233829, -0.01430307,  0.0183921 ,\n",
+       "        0.00768219, -0.02199128,  0.02865104, -0.00252148, -0.02320654,\n",
+       "        0.01620888,  0.00626117,  0.01115923, -0.02461884,  0.00966016,\n",
+       "        0.00413173,  0.01453061,  0.01137534,  0.00338052,  0.02364395,\n",
+       "        0.0120802 , -0.00158566, -0.00141104, -0.00238601, -0.00131723,\n",
+       "       -0.00585807, -0.00893707, -0.01215205,  0.01754142,  0.00075872,\n",
+       "       -0.00285226,  0.01599788,  0.01897599,  0.01222019,  0.00413566,\n",
+       "        0.0236641 ,  0.00380974, -0.00076036, -0.00311484,  0.03180251,\n",
+       "        0.00785607,  0.00584136, -0.01472798, -0.00135713, -0.00425216],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdoc = ['私','は','秋田','犬','が','大好き','。']\n",
+    "model.infer_vector(newdoc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c11b621",
+   "id": "9667008b",
    "metadata": {},
    "outputs": [],
    "source": []
